Details
- 
    Bug 
- 
    Resolution: Fixed
- 
    Minor 
- 
    trunk r69063 
Description
open service manager
Currently you can not sort the services listview for anything other than service-name, regardless which column header of the list view you click.
Often it makes sense to sort services according to state or startup-type.
servman-sort-columns.patch let's you sort the list-view by any column in ascending and descending order.
 let's you sort the list-view by any column in ascending and descending order.
Can anyone commit?
Full name:Joachim Henze